--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,10 +19,10 @@
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       <script async src="https://telegram.org/js/telegram-widget.js?21" data-telegram-post="jpa_alert_me/208" data-width="100%"></script>
-      <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
-      # {% if site.github.is_project_page %}
-        # <a href="jpa_alert_me" class="btn">Zum Telegram-Channel</a>
-      # {% endif %}
+      <a href="https://t.me/jpa_alert_me" class="btn">Zum Telegram-Channel</a>
+      {% if site.github.is_project_page %}
+        <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
+      {% endif %}
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
